SERVER-7516 do not swallow socket errors during cloner copies